--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
   <title>هافركامب | افضل حماية سيارات بالكويت </title>
-  <meta name=”robots” content="index, follow">
+  <meta name="robots" content="index, follow">
   <meta name="description"
     content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
@@ -20,6 +20,7 @@
 
     gtag('config', 'AW-16636917037');
   </script>
+
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ar_AR">
@@ -33,42 +34,89 @@
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- Schema.org JSON-LD -->
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "هافركامب|HaverKamp",
-    "image": "https://haverkampkw.com/img/contact/cover.jpeg",
-    "@id": "https://haverkampkw.com",
-    "url": "https://haverkampkw.com",
-    "telephone": "+965 51111154",
-    "priceRange": "400$",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": " الري ",
-      "addressLocality": "الكويت",
-      "addressCountry": "KW"
-    },
-    "openingHoursSpecification": [{
-  "@type": "OpeningHoursSpecification",
-  "dayOfWeek": ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thursday"],
-  "opens": "10:00",
-  "closes": "20:00"
-}],
-    "sameAs": [
-      "https://www.instagram.com/haverkampkw"
-    ],
-    "description": "شركة هافركامب لحماية السيارات تقدم حلولاً متقدمة في حماية الطلاء والعزل الحراري باستخدام تقنية النانو سيراميك الألمانية بجودة وضمان يصل إلى 10 سنوات."
+    "@graph": [
+      {
+        "@type": "Service",
+        "serviceType": "حماية سيارات",
+        "provider": {
+          "@type": "LocalBusiness",
+          "name": "هافركامب ",
+          "url": "https://haverkampkw.com/protication.html"
+        },
+        "areaServed": {
+          "@type": "Place",
+          "name": "الكويت"
+        },
+        "description": "اقوي حماية سيارات بالكويت | حماية فل بدي كفالة 10 سنوات اسعار تبدا من 400 دينار"
+      },
+      {
+        "@type": "Service",
+        "serviceType": " حماية بدي المانية",
+        "provider": {
+          "@type": "LocalBusiness",
+          "name": "هافركامب",
+          "url": "https://haverkampkw.com/haverkamp.html"
+        },
+        "areaServed": {
+          "@type": "Place",
+          "name": "الكويت"
+        },
+        "description": "حماية المانية سماكة 9.5 ميكروميلي كفالة 10 سنوات"
+      },
+      {
+        "@type": "Service",
+        "serviceType": "عازل حراري ",
+        "provider": {
+          "@type": "LocalBusiness",
+          "name": "هافركامب الكويت",
+          "url": "https://haverkampkw.com/tint.html"
+        },
+        "areaServed": {
+          "@type": "Place",
+          "name": "الكويت"
+        },
+        "description": "عازل حراري ألماني يحجب الحرارة والأشعة فوق البنفسجية بنسبة تتجاوز 90%، يحافظ على برودة السيارة ويوفر الخصوصية."
+      },
+      {
+        "@type": "Service",
+        "serviceType": "بوليش وتلميع احترافي",
+        "provider": {
+          "@type": "LocalBusiness",
+          "name": "هافركامب الكويت",
+          "url": "https://haverkampkw.com"
+        },
+        "areaServed": {
+          "@type": "Place",
+          "name": "الكويت"
+        },
+        "description": "خدمة بوليش احترافية لإزالة الخدوش السطحية وتجديد لمعان الطلاء باستخدام أدوات ومواد ألمانية عالية الجودة."
+      },
+      {
+        "@type": "Service",
+        "serviceType": "نانو للمقاعد والداخلية",
+        "provider": {
+          "@type": "LocalBusiness",
+          "name": "هافركامب الكويت",
+          "url": "https://haverkampkw.com"
+        },
+        "areaServed": {
+          "@type": "Place",
+          "name": "الكويت"
+        },
+        "description": "نانو سيراميك خاص للمقاعد الداخلية يمنع امتصاص السوائل والبقع ويحافظ على الجلد والأقمشة نظيفة لفترة أطول."
+      }
+    ]
   }
   </script>
-
-
-
   <!-- favicon -->
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href=".//img/favicon_io/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
   <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
@@ -83,7 +131,7 @@
   <!-- font-awesome  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <!-- js -->
-  <script defer src="js/script.js"></script>
+  <script defer src="js/script.js"> </script>
 </head>
 
 <body>
@@ -475,27 +523,27 @@
       <div class="box">
         <h3>هافركامب</h3>
         <!-- <ul class="social">
-          <li>
-            <a href="tel:51111154" class="phone">
-              <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://wa.me/96551111154" target="_blank" class="whatsapp">
-              <i class="fab fa-whatsapp fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/haverkampkw/" target="_blank" class="instagram">
-              <i class="fab fa-instagram fa-2x"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.snapchat.com/add/haverkampkw" target="_blank" class="snapchat">
-              <i class="fab fa-snapchat fa-2x"></i>
-            </a>
-          </li>
-        </ul>
+                <li>
+                  <a href="tel:51111154" class="phone">
+                    <i class="fa-solid fa-mobile-screen-button fa-2x"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://wa.me/96551111154" target="_blank" class="whatsapp">
+                    <i class="fab fa-whatsapp fa-2x"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/haverkampkw/" target="_blank" class="instagram">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.snapchat.com/add/haverkampkw" target="_blank" class="snapchat">
+                    <i class="fab fa-snapchat fa-2x"></i>
+                  </a>
+                </li>
+              </ul>
         -->
         <p class="text"> الوكيل الحصري لحماية هافركامب الالمانية في الشرق الاوسط <br> الوكيل الحصري لحماية كلايف ديزاين
           الكورية</p>
@@ -527,28 +575,28 @@
     </p>
   </div>
   <!-- <div class="designer">
-    <p class="copyright">Made With &#10084; By a7med206</p>
-    <ul class="social-a7med">
-      <li>
-        <a href="tel:65811402" class="phone">
-          <i class="fa-solid fa-mobile-screen-button"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://wa.me/96565811402" target="_blank" class="whatsapp">
-          <i class="fab fa-whatsapp fa-2x"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/a7med206/" target="_blank" class="instagram">
-          <i class="fab fa-instagram fa-2x"></i>
-        </a>
-      </li>
-    </ul>
+          <p class="copyright">Made With &#10084; By a7med206</p>
+          <ul class="social-a7med">
+            <li>
+              <a href="tel:65811402" class="phone">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://wa.me/96565811402" target="_blank" class="whatsapp">
+                <i class="fab fa-whatsapp fa-2x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/a7med206/" target="_blank" class="instagram">
+                <i class="fab fa-instagram fa-2x"></i>
+              </a>
+            </li>
+          </ul>
 
-  </div> -->
+        </div> -->
   <!-- End Footer -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></script>
-</body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"></scrip >
+      </body >
 
-</html>
+</html >
