--- a/protication.html
+++ b/protication.html
@@ -24,62 +24,91 @@
   <meta name="theme-color" content="#00345c">
   <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- Schema.org JSON-LD -->
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Service",
-  "serviceType": "حماية هافركامب",
-  "provider": {
-    "@type": "LocalBusiness",
-    "name": "هافركامب لحماية السيارات",
-    "image": "https://haverkampkw.com/img/contact/cover.jpeg",
-    "url": "https://www.haverkampkw.com",
-    "telephone": "+965 51111154",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": " الري، الكويت",
-      "addressLocality": "الكويت",
-      "addressCountry": "KW"
-    },
-    "openingHoursSpecification": [{
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thursday"],
-      "opens": "10:00",
-      "closes": "20:00"
-    }],
-    "sameAs": [
-      "https://www.instagram.com/haverkamp",
-      "https://www.facebook.com/haverkamp",
-      "https://maps.app.goo.gl/rnF3t2HM2ig7cM7f9"
-    ]
-  },
-  "areaServed": {
-    "@type": "Place",
-    "name": "الكويت"
-  },
-  "description": "حماية فل بدي المانية - عازل حراري - حماية جام - نانو للمقاعد- نانو للرتقات - تلبيس للدواسات",
-  "offers": {
-    "@type": "Offer",
-    "priceCurrency": "KWD",
-    "price": "400.000",
-    "availability": "https://schema.org/InStock",
-    "url": "https://haverkampkw.com/haverkamp.html"
-  },
-  "brand": {
-    "@type": "Brand",
-    "name": "Haverkamp",
-    "logo": "https://haverkampkw.com/img/main_page/haverkamp.webp"
-  }
-}
-</script>
 
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Service",
+          "serviceType": "حماية سيارات",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "هافركامب ",
+            "url": "https://haverkampkw.com/protication.html"
+          },
+          "areaServed": {
+            "@type": "Place",
+            "name": "الكويت"
+          },
+          "description": "اقوي حماية سيارات بالكويت | حماية فل بدي كفالة 10 سنوات اسعار تبدا من 400 دينار"
+        },
+        {
+          "@type": "Service",
+          "serviceType": " حماية بدي المانية",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "هافركامب",
+            "url": "https://haverkampkw.com/haverkamp.html"
+          },
+          "areaServed": {
+            "@type": "Place",
+            "name": "الكويت"
+          },
+          "description": "حماية المانية سماكة 9.5 ميكروميلي كفالة 10 سنوات"
+        },
+        {
+          "@type": "Service",
+          "serviceType": "عازل حراري ",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "هافركامب الكويت",
+            "url": "https://haverkampkw.com/tint.html"
+          },
+          "areaServed": {
+            "@type": "Place",
+            "name": "الكويت"
+          },
+          "description": "عازل حراري ألماني يحجب الحرارة والأشعة فوق البنفسجية بنسبة تتجاوز 90%، يحافظ على برودة السيارة ويوفر الخصوصية."
+        },
+        {
+          "@type": "Service",
+          "serviceType": "بوليش وتلميع احترافي",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "هافركامب الكويت",
+            "url": "https://haverkampkw.com"
+          },
+          "areaServed": {
+            "@type": "Place",
+            "name": "الكويت"
+          },
+          "description": "خدمة بوليش احترافية لإزالة الخدوش السطحية وتجديد لمعان الطلاء باستخدام أدوات ومواد ألمانية عالية الجودة."
+        },
+        {
+          "@type": "Service",
+          "serviceType": "نانو للمقاعد والداخلية",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "هافركامب الكويت",
+            "url": "https://haverkampkw.com"
+          },
+          "areaServed": {
+            "@type": "Place",
+            "name": "الكويت"
+          },
+          "description": "نانو سيراميك خاص للمقاعد الداخلية يمنع امتصاص السوائل والبقع ويحافظ على الجلد والأقمشة نظيفة لفترة أطول."
+        }
+      ]
+    }
+    </script>
 
 
   <!-- favicon -->
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href=".//img/favicon_io/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
   <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
