--- a/terms.html
+++ b/terms.html
@@ -6,25 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- seo -->
   <title>haverkamp | هافركامب</title>
-  <meta name=”robots” content="index, follow">
+  <meta name="robots" content="index, follow">
   <meta name="description" content="افضل واقوي حماية وعازل حراري بالكويت ، منتج الماني 
  ">
   <meta name="author" content="Ahmad M-Nofal">
   <!-- Open Graph -->
-  <meta property="og:title" content="haverkamp | هافركامب" />
-  <meta property="og:description"
-    content="الوكيل الحصري لحمايات هافركامب الالمانية في الشرق الاوسط وحمايات كلايف ديزاين الكورية في الخليج" />
-  <meta property="og:image" content="https://example.com/image.jpg" />
-  <meta property="og:url" content="https://haverkampkw.com" />
   <meta property="og:type" content="website" />
-
-
+  <meta property="og:locale" content="ar_AR">
+  <meta property="og:title"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:description"
+    content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
+  <meta property="og:image" content="https://haverkampkw.com/img/contact/cover.jpeg" />
+  <meta property="og:url" content="https://haverkampkw.com" />
+  <meta property="og:site_name" content="هافركامب">
+  <meta name="theme-color" content="#00345c">
+  <link rel="canonical" href="https://www.haverkampkw.com/">
   <!-- favicon -->
 
   <link rel="shortcut icon" href="./img/favicon_io/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon_io/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href=".//img/favicon_io/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon_io/android-chrome-512x512.png">
   <link rel="apple-touch-icon" href="./img/favicon_io/apple-touch-icon.png">
   <link rel="manifest" href="./site.webmanifest">
   <!-- font -->
