--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- seo -->
   <title>هافركامب | افضل حماية سيارات بالكويت </title>
   <meta name="robots" content="index, follow">
+  <meta name="msvalidate.01" content="6198358A4D794604238ACB9F4AEF9BFA" />
   <meta name="description"
     content=" هافركامب اقوي حماية سيارات بالكويت حماية المانية كفالة 10 سنوات - حماية فل بدي - عازل حراري - حماية جام - نانو للمقاعد - نانو للرنقات - بوليش  " />
   <meta name="author" content="Ahmad M-Nofal">
