--- a/index.html
+++ b/index.html
@@ -275,19 +275,25 @@
         <div class="services-box">
           <img src="./img/main_page/painting.jpg" alt="painting">
           <div class="services-info">
-            <h3> صبغ</h3>
+            <a href="./paint.html">
+              <h3> صبغ</h3>
+            </a>
           </div>
         </div>
         <div class="services-box">
           <img src="./img/main_page/polishing.png" alt="polish">
           <div class="services-info">
-            <h3>بوليش </h3>
+            <a href="./polish.html">
+              <h3>بوليش </h3>
+            </a>
           </div>
         </div>
         <div class="services-box">
           <img src="./img/main_page/swarfsky.webp" alt="accessories">
           <div class="services-info">
-            <h3> اكسسوارات</h3>
+            <a href="">
+              <h3> اكسسوارات</h3>
+            </a>
           </div>
         </div>
         <div class="services-box">
